# VAD-modular

./: .gitignore  README.md
cpp_orchestrator/: CMakeLists.txt
cpp_orchestrator/src/: main.cpp
python-ai-services/: main.py  pyproject.toml  requirements.txt  services.py
