[project]
name = "video-analyzer"
version = "0.1.0"
description = "AI-powered video analysis using Video-LLaMA"
requires-python = ">=3.9"
dependencies = [
    "markupsafe==2.1.5",    # Add this line first
    "torch>=2.7.1",
    "torchvision",
    "torchaudio",
    "transformers>=4.46.3",
    "opencv-python",
    "transformers==4.46.3",
    "pillow",
    "python-dotenv",
    "ollama",
    "numpy",
    "accelerate",
    "bitsandbytes",
]

[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
